@@ -41,6 +41,7 @@
 		<!-- ###STEP1### end -->
 		
 		<!-- ###STEP2### begin -->
+		<p>###LLDESCRIPTION###</p>
 		<form method="post" action="###ACTION###">
 			<fieldset class="t3-install-form-label-width-7">
 				<ol>
